tests/fixtures/errors/e0303_const_in_repeat.mimz
// expect: E0303
module M {
  out y: bits[4]
  repeat i: 0..4 {
    const C: int = 1
    y[i] = 0
  }
}
